Fixed. Padding is on bottom, but it is also required on right and left to align all content

--- a/css/paragraphs/content-row.css
+++ b/css/paragraphs/content-row.css
@@ -14,7 +14,7 @@
 }
 
 .row-text-container {
-  padding: 0 0 0 1em;
+  padding: 0 1em 1em 1em;
 }
 
 .row-card .row-text-container {
